--- a/apps/shop-bridge/src/app/layout/core/header/header.component.html
+++ b/apps/shop-bridge/src/app/layout/core/header/header.component.html
@@ -48,14 +48,14 @@
                     <a
                         class="nav-link font-bold text-gray-500 underline decoration-sky-500 hover:decoration-pink-500 p-0"
                         routerLink="/"
-                        >Home</a
+                    >Home</a
                     >
                 </li>
                 <li class="nav-item p-2">
                     <a
                         class="nav-link font-bold text-gray-500 underline decoration-sky-500 hover:decoration-pink-500 p-0"
                         routerLink="/list"
-                        >Inventory</a
+                    >Inventory</a
                     >
                 </li>
             </ul>
@@ -65,7 +65,7 @@
         <!-- Right elements -->
         <div class="flex items-center relative">
             <!-- Icon -->
-            <a class="mx-2" href="#">
+            <a class="mx-2" href="https://twitter.com/ShubhrankR" target="_blank">
                 <img
                     alt="Shubhrank Rastogi handlle for twitter"
                     src="https://img.icons8.com/fluent/48/000000/twitter.png"
