--- a/apps/shop-bridge/src/app/layout/core/wrapper/wrapper.component.html
+++ b/apps/shop-bridge/src/app/layout/core/wrapper/wrapper.component.html
@@ -2,4 +2,4 @@
 <main class="container mx-auto p-4">
     <router-outlet></router-outlet>
 </main>
-<thinkbridge-footer class="md:absolute md:bottom-0 w-full"></thinkbridge-footer>
+<thinkbridge-footer class="lg:absolute lg:bottom-0 w-full"></thinkbridge-footer>
